avoid overlap

--- a/src/c3nav/site/static/site/css/c3nav.scss
+++ b/src/c3nav/site/static/site/css/c3nav.scss
@@ -579,15 +579,16 @@ main.show-options #resultswrapper #route-options {
     white-space: nowrap;
 }
 .location-label-text {
-    line-height: 110%;
+    line-height: 100%;
     border-radius: 2px;
     white-space: nowrap;
     transform: translateX(-50%) translateY(-50%);
     text-align: center;
 
     span {
-        line-height: 110%;
+        line-height: 100%;
         background-color: rgba(255, 255, 255, 0.6);
+        vertical-align: 2px;
     }
 }
 
